# advertising

./: .env.example  .gitignore  README.md  alembic.ini  bot.py  car_conv.py  db.py  docker-compose.yml  motor_conv.py  pyproject.toml  requirements.txt  setup_db_table.py
alembic/: env.py
etc/docker_files/: Dockerfile
etc/postgres/: init.sql  postgres_init.sh
src/: admin_bot.py  admin_ui.py  bot.py  car_conv.py  constants.py  db.py  keyboards.py  motor_conv.py  user.py  user_bot.py  vehical_test.py  vehicle.py
src/db/: advertisement_service.py  base.py  models.py
