[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "javasd"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv (==1.0.1)",
    "anyio (==4.4.0)",
    "certifi (==2024.7.4)",
    "charset-normalizer (==3.3.2)",
    "dnspython (==2.6.1)",
    "h11 (==0.14.0)",
    "httpcore (==1.0.5)",
    "httpx (==0.27.0)",
    "idna (==3.7)",
    "psycopg2-binary (==2.9.10)",
    "python-telegram-bot (==21.4)",
    "requests (==2.32.3)",
    "sniffio (==1.3.1)",
    "urllib3 (==2.2.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
